# tlib-c

./: .gitignore  CMakeLists.txt  README.md
include/: hash.h
include/tlib/: array.h  array_table.h  common.h  config.h  hash_table.h  list.h  small_array.h  string.h  tlib.h
src/: array.c  hash_table.c  list.c  string.c
tests/: CMakeLists.txt  test_array_data.c  test_htbl_data.c  test_htbl_init.c  test_list_data.c  test_string.c  tests.h
